Use Byte.valueOf to replace depreciated Byte constructor.